--- a/index.html
+++ b/index.html
@@ -95,6 +95,129 @@
                 </div>
             </div>
         </section>
+        <section class="works">
+            <div class="container works__container">
+            <h2 class="works__title">How It Works</h2>
+            <p class="works__desc">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form</p>
+            <div class="works__zone">
+                 <div class="works__box">
+                 <div class="box__group">
+                    <img src="./img/works1.jpg" alt="" class="box__img">
+                    <div class="box__circle">1</div>
+                 </div>
+                    <h3 class="box__title">Purchase Securely</h3>
+                    <p class="box__desc">You need to be sure there isn't anything embarrassing hidden the</p>
+                 </div>
+                 <div class="works__box">
+                    <div class="box__group">
+                        <img src="./img/works2.jpg" alt="" class="box__img">
+                    <div class="box__circle">2</div>
+                     </div>
+                    <h3 class="box__title">Ships From Warehouse</h3>
+                    <p class="box__desc">There are many variations of passages of Lorem Ipsum available</p>
+                 </div>
+                   <div class="works__box">
+                    <div class="box__group">
+                    <img src="./img/works3.jpg" alt="" class="box__img">
+                    <div class="box__circle">3</div>
+                </div>
+                    <h3 class="box__title">Style Your Room</h3>
+                    <p class="box__desc">All the Lorem Ipsum generators on the Internet tend to repeat prede</p>
+                </div>
+            </div>
+        </div>
+        </section>
+        <section class="video">
+            <h2 class="video__title">Pick your choise</h2>
+            <p class="video__desc">It is a long established fact that a reader will be distracted by the of readable content of page  lookings at its layouts  points.</p>
+            <img src="./img/Frame 99.jpg" alt="" class="video__img">
+        </section>
+        <section class="news">
+            <div class="container news__container">
+            <h2 class="news__title">Articles & News</h2>
+            <p class="news__desc">It is a long established fact that a reader will be distracted by the of readable content of a page when lookings at its layouts the points of using.</p>
+            <div class="news__zone">
+                 <div class="news__box">
+                 <div class="box__group">
+                    <img src="./img/news1.jpg" alt="" class="box__img">
+                <spam class="label">Living Design</spam>
+                 </div>
+                    <h3 class="box__title news__box__title">Best For Any Office & Business Interior Solution</h3>
+                    <p class="box__desc">All the Lorem Ipsum generators on the Internet tend to repeat prede</p>
+                 </div>
+                 <div class="works__box">
+                    <div class="box__group">
+                        <img src="./img/news2.jpg" alt="" class="box__img">
+                <spam class="label">Living Design</spam>
+                     </div>
+                    <h3 class="box__title news__box__title">Low Cost Latest Invented Interior Designing Ideas.</h3>
+                    <p class="box__desc">All the Lorem Ipsum generators on the Internet tend to repeat prede</p>
+                 </div>
+                   <div class="works__box">
+                    <div class="box__group">
+                    <img src="./img/news3.jpg" alt="" class="box__img">
+                <spam class="label">Living Design</spam>
+                  </div>
+                    <h3 class="box__title news__box__title">Best For Any Office & Business Interior Solution</h3>
+                    <p class="box__desc">All the Lorem Ipsum generators on the Internet tend to repeat prede</p>
+                </div>
+            </div>
+        </div>
+        <section class="contact">
+            <div class="container contact__container">
+                <h2 class="contact__title">Wanna join the Decorative?</h2>
+                <p class="contact__desc">Join us and get all offer from our news letters!</p>
+                <button class="btn contact__btn">Contact With Us <img src="./img/arrow.svg" alt=""></button>
+            </div>
+        </section>
     </main>
+    <footer class="footer">
+        <div class="container footer__container">
+            <div class="footer__box">
+            <div class="logo">
+                <a href="#" class="logo__link">
+                    <img src="./img/logo.svg" alt="" class="logo__img">
+                    Decorative
+                </a>
+                <p class="footer__desc footer__sublogo">It is a long established fact that a reader will be distracted lookings.</p>
+            </div>
+                <div class="footer__social">
+                    <a href="#"><img src="./img/instagram.svg" alt=""></a>
+                    <a href="#"><img src="./img/libkd.svg" alt=""></a>
+                    <a href="#"><img src="./img/facebook.svg" alt=""></a>
+                    <a href="#"><img src="./img/tvitter.svg" alt=""></a>
+                </div>
+            </div>
+            <div class="footer__box">
+                <h3 class="footer__title">Pages</h3>
+                <ul class="footer__list">
+                    <li class="footer__item">
+                        <a href="" class="footer__link">About Us</a></li>
+                    <li class="footer__item">
+                        <a href="" class="footer__link">Our Team</a></li>
+                    <li class="footer__item"><a href="" class="footer__link">Contact Us</a></li>
+                    <li class="footer__item"><a href="" class="footer__link">Services</a></li>
+                </ul>
+            </div>
+            <div class="footer__box">
+                <h3 class="footer__title">Services</h3>
+                <ul class="footer__list">
+                    <li class="footer__item"><a href="" class="footer__link">Kitchan</a></li>
+                    <li class="footer__item"><a href="" class="footer__link">Living Area</a></li>
+                    <li class="footer__item"><a href="" class="footer__link">Bathroom</a></li>
+                    <li class="footer__item"><a href="" class="footer__link">Dinning Hall</a></li>
+                    <li class="footer__item"><a href="" class="footer__link">Bedroom</a></li>
+                </ul>
+            </div>
+                    <div class="footer__box">
+                    <h3 class="footer__title">Contact</h3>
+                    <ul class="footer__list">
+                        <li class="footer__item"><a href="" class="footer__desc footer__width">27 East Jatrabary Road. Dhaka-1236</a></li>
+                        <li class="footer__item"><a href="" class="footer__link">contact@decorative.com</a></li>
+                        <li class="footer__item"><a href="" class="footer__link">+880 1674 186 801</a></li>
+                    </ul>
+                </div>
+            </div>
+    </footer>
 </body>
 </html>
